--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,8 @@
 <!-- Navigation -->
-<div class="bg-dark">
-  <div class="container-fluid bg-dark">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="{{ site.baseurl }}/">Performances Database</a> &nbsp;
+<div class="bg-darkXX bg-light">
+  <div class="container-fluid bg-darkXX bg-light">
+    <nav class="navbar navbar-expand-lg navbar-darkXX bg-darkXX navbar-light bg-light">
+      <a class="navbar-brand" href="{{ site.baseurl }}/">Performances database</a> &nbsp;
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
