--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <!-- FOOTER -->
 <div class="footer">
   <div class="container">
-    <p><a href="/about/"><i class="fas fa-info-circle" aria-hidden="true"></i> About the project</a></p>
+    <p>About the project...</p>
   </div>
 </div>
 
