--- a/assets/style.css
+++ b/assets/style.css
@@ -29,6 +29,16 @@ h1, h2, h3              {font-weight: 300}
 .tick li::before     {content: "\f14a"; font-family: 'Font Awesome 5 free'; font-weight: 900; margin:0 10px 0 -20px; color: #6c757d}
 .chevron li::before     {content: "\f138"; font-family: 'Font Awesome 5 free'; font-weight: 900; margin:0 10px 0 -20px; color: #6c757d}
 
+
+/* first */
+#first                  {font-size: 80%; font-weight: 300}
+#first span             {display: block; font-size: 1.2rem; }
+
+/*  map  */
+#citiesMap svg          {background: #efefef}
+
+
+
 /* chart  elements*/
 /* black text on rows (else cant read white when extends beyond bar)  */
 .dc-chart g.row text			{ fill: #000;}
