--- a/assets/style.css
+++ b/assets/style.css
@@ -32,6 +32,9 @@ h1, h2, h3              {font-weight: 300}
 /* composer */
 #chart-composite-composers #this-composer     {position: absolute; right: 50%}
 
+#chart-bubbles-time .grid .domain {opacity: 0;}  /* hide axis and so 1st grid line */
+
+
 /* first */
 #first                  {font-size: 80%; font-weight: 300}
 #first span             {display: block; font-size: 1.2rem; }
