--- a/assets/style.css
+++ b/assets/style.css
@@ -29,6 +29,19 @@ h1, h2, h3              {font-weight: 300}
 .tick li::before     {content: "\f14a"; font-family: 'Font Awesome 5 free'; font-weight: 900; margin:0 10px 0 -20px; color: #6c757d}
 .chevron li::before     {content: "\f138"; font-family: 'Font Awesome 5 free'; font-weight: 900; margin:0 10px 0 -20px; color: #6c757d}
 
+
+/* blank slate info panel */
+.hidden                 {display: none}
+#info                   {padding: 3em}
+
+.steps                  {margin-top: 25px}
+.steps .card-img-top    {padding: 0 40px}
+.steps .card            {float:left; width: 30%; text-align: center; border: 0}
+.steps h3               {margin-top: 30px}
+
+
+
+
 /* composer */
 #chart-composite-composers #this-composer     {position: absolute; right: 50%}
 
